syntax = "proto3";
package user;

import "auth.proto";
import "rooms.proto";

option go_package = ".;proto";

service User {
    rpc GetUserByID(auth.UserID) returns (UserStruct) {}
	rpc GetUsers(Empty) returns (GetUsersResponse) {}
	rpc CreateUser(UserStruct) returns (UserStruct) {}
	rpc UpdateUser(UserStruct) returns (UserStruct) {}
	rpc DeleteUser(auth.UserID) returns (auth.DeleteUserResponse) {}
}

message Empty {}

message UserStruct {
	bytes UserInfo = 1;
	rooms.Status Status = 2;
}

message GetUsersResponse {
	repeated UserStruct users = 1;
	rooms.Status Status = 2;
}
